--- a/src/app/views/schedule-bdd/schedule-bdd.component.html
+++ b/src/app/views/schedule-bdd/schedule-bdd.component.html
@@ -1,12 +1,13 @@
 <section
-  class="flex items-center justify-center h-full text-gray-600 dark:text-gray-50"
+  class="flex items-center border-2 justify-center h-full text-gray-600 dark:text-gray-50"
 >
-  <div class="flex flex-col bg-white dark:bg-gray-800 rounded-lg w-10/12">
+  <div class="flex flex-col bg-white dark:bg-gray-800 rounded-lg w-10/12"
+       *ngIf="schedulesObservable | loadingState | async as schedules">
     <div class="-m-1.5">
       <div class="p-1.5 min-w-full inline-block align-middle">
         <div
-          [ngClass]="(schedules | async)?.length ? '' : 'pb-6'"
-          class="border rounded-lg divide-y divide-gray-200 dark:border-gray-700 dark:divide-gray-700"
+          [ngClass]="schedules.data?.length ? '' : 'pb-6'"
+          class="border-2 border-solid border-slate-500 rounded-lg divide-y divide-gray-200 dark:border-slate-500 dark:divide-gray-700"
         >
           <h1 class="px-4 py-3 text-2xl font-bold">Gestion des évènements</h1>
           <hr class="border-gray-400 dark:border-gray-800"/>
@@ -32,7 +33,7 @@
                 />
               </svg>
             </button>
-            <ng-container *ngIf="idSchedulesChecked.length > 0">
+            <ng-container *ngIf="idsChecked.length > 0">
               <button
                 (click)="onWantDeleteSelection()"
                 class="py-2 px-3 inline-flex items-center gap-x-2 text-sm rounded-lg border border-transparent bg-red-500 text-white hover:bg-red-600 disabled:opacity-50 disabled:cursor-not-allowed dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
@@ -42,8 +43,8 @@
               </button>
               <div class="flex flex-col h-full my-auto">
                 <p>
-                  {{ idSchedulesChecked.length }} selectionnée{{
-                    idSchedulesChecked.length > 1 ? "s" : ""
+                  {{ idsChecked.length }} selectionnée{{
+                    idsChecked.length > 1 ? "s" : ""
                   }}
                 </p>
               </div>
@@ -53,194 +54,16 @@
             aria-label="Table des évènements du bot"
             class="min-w-full text-center"
           >
-            <thead class="bg-blue-100 border-b dark:bg-blue-700">
-            <tr>
-              <th class="py-3 px-4 pe-0" scope="col">
-                <div class="flex items-center h-5">
-                  <input *ngIf="schedules | async as s"
-                    (click)="onChangeAllCheckbox($event, s)"
-                    [checked]="s.length &&
-                        idSchedulesChecked.length ==
-                          s.length"
-                    [disabled]="!s.length"
-                    class="w-4 h-4 border-gray-200 rounded text-gray-600 focus:ring-blue-500 dark:bg-blue-800 dark:border-gray-700 dark:checked:bg-blue-500 disabled:hover:cursor-not-allowed dark:checked:border-blue-500 dark:focus:ring-offset-gray-800"
-                    id="hs-table-pagination-checkbox-all"
-                    title="Sélectionner tous les éléments"
-                    type="checkbox"
-                  />
-                  <label
-                    class="sr-only"
-                    for="hs-table-pagination-checkbox-all"
-                  >Checkbox</label
-                  >
-                </div>
-              </th>
-              <th class="px-6 py-3 text-sm font-medium uppercase" scope="col">
-                Id
-              </th>
-              <th class="px-6 py-3 text-sm font-medium uppercase" scope="col">
-                Message
-              </th>
-              <th
-                class="w-52 px-6 py-3 text-sm font-medium uppercase"
-                scope="col"
-              >
-                Dates
-              </th>
-              <th
-                class="w-36 px-6 py-3 text-sm font-medium uppercase"
-                scope="col"
-              >
-                Temps
-              </th>
-              <th
-                class="w-32 px-6 py-3 text-sm font-medium uppercase"
-                scope="col"
-              >
-                Action
-              </th>
-            </tr>
-            </thead>
-            <tbody class="border-b">
-            <ng-container
-              *ngIf="schedules | loadingState | async as schedulesState"
-            >
-              <tr *ngIf="schedulesState.loading" class="mx-auto bg-blue-200">
-                <td
-                  class="py-6 text-gray-600 dark:bg-blue-800 dark:text-white"
-                  colspan="100"
-                >
-                  <div class="animate-spin inline-block size-6 border-solid border-[3px] border-current border-t-transparent text-blue-600 rounded-full dark:text-blue-500" role="status" aria-label="loading">
-                    <span class="sr-only">Chargement...</span>
-                  </div>
-                </td>
-              </tr>
-              <ng-container *ngIf="!schedulesState.loading">
-                <tr
-                  *ngIf="schedulesState.error"
-                  class="mx-auto text-red-500 bg-blue-200 dark:bg-blue-900"
-                >
-                  <td class="py-4" colspan="100">
-                    {{ schedulesState.error }}
-                  </td>
-                </tr>
-                <tr
-                  *ngIf="schedulesState.data?.length === 0"
-                  class="mx-auto bg-blue-200 dark:bg-blue-900"
-                >
-                  <td class="py-4" colspan="100">Aucune donnée trouvé</td>
-                </tr>
-                <tr
-                  *ngFor="
-                      let schedule of schedulesState?.data;
-                      let index = index
-                    "
-                  class="bg-blue-50 dark:bg-blue-900"
-                >
-                  <td class="py-3 ps-4">
-                    <div class="flex items-center h-5">
-                      <input
-                        (change)="onChangeCheckbox(schedule.id)"
-                        [checked]="isChecked(schedule.id)"
-                        class="w-4 h-4 border-gray-200 rounded text-blue-600 focus:ring-blue-500 dark:bg-blue-800 dark:border-gray-700 dark:checked:bg-blue-500 dark:checked:border-blue-500 dark:focus:ring-offset-gray-800"
-                        id="hs-table-pagination-checkbox-1"
-                        title="Sélectionner l'élément"
-                        type="checkbox"
-                      />
-                      <label
-                        class="sr-only"
-                        for="hs-table-pagination-checkbox-1"
-                      >
-                        Checkbox
-                      </label>
-                    </div>
-                  </td>
-                  <td
-                    class="px-6 py-4 whitespace-nowrap text-md font-medium text-gray-800 dark:text-gray-200"
-                  >
-                    {{ schedule.id }}
-                  </td>
-                  <td
-                    class="px-6 py-4 text-md text-gray-800 dark:text-gray-200"
-                  >
-                    {{ schedule.message | truncate: 92 }}
-                  </td>
-                  <td
-                    class="px-6 py-4 whitespace-nowrap text-md text-gray-800 dark:text-gray-200 align-middle"
-                  >
-                    <div
-                      class="max-h-[4rem] overflow-y-auto snap-y [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-track]:rounded-full [&::-webkit-scrollbar-track]:bg-blue-100 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-blue-700 dark:[&::-webkit-scrollbar-thumb]:bg-blue-500">
-                      <ng-container *ngFor="let date of schedule.dates; let last = last">
-                        {{ date | date: "dd MMMM yyyy" }}
-                        <ng-container *ngIf="!last"><br/></ng-container>
-                      </ng-container>
-                    </div>
-                  </td>
-                  <td
-                    class="px-6 py-4 whitespace-nowrap text-md text-gray-800 dark:text-gray-200 align-middle"
-                  >
-                    <div
-                      class="overflow-y-auto max-h-[4rem] snap-y [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-track]:rounded-full [&::-webkit-scrollbar-track]:bg-blue-100 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-blue-700 dark:[&::-webkit-scrollbar-thumb]:bg-blue-500"
-                    >
-                      <ng-container
-                        *ngFor="let time of schedule.times; let last = last"
-                      >
-                        {{ time }}
-                        <ng-container *ngIf="!last"><br/></ng-container>
-                      </ng-container>
-                    </div>
-                  </td>
-                  <td class="px-6 py-4 whitespace-nowrap text-md font-medium">
-                    <button
-                      class="inline-flex items-center gap-x-2 text-md font-semibold rounded-lg border border-transparent hover:text-blue-400 focus:text-blue-700 disabled:opacity-50 disabled:cursor-not-allowed dark:text-gray-300 dark:hover:text-red-400 dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-blue-600"
-                      title="Modifier"
-                      type="button"
-                    >
-                      <svg
-                        class="w-6 h-6"
-                        fill="none"
-                        stroke="currentColor"
-                        stroke-width="1.5"
-                        viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        />
-                      </svg>
-                    </button>
-                    <button
-                      (click)="onWantDeleteById(schedule.id)"
-                      class="inline-flex items-center gap-x-2 text-md font-semibold rounded-lg border border-transparent hover:text-red-500 disabled:opacity-50 disabled:cursor-not-allowed dark:text-gray-300 dark:hover:text-red-400"
-                      title="Supprimer"
-                      type="button"
-                    >
-                      <svg
-                        class="w-6 h-6"
-                        fill="none"
-                        stroke="currentColor"
-                        stroke-width="1.5"
-                        viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        />
-                      </svg>
-                    </button>
-                  </td>
-                </tr>
-              </ng-container>
-            </ng-container>
-            </tbody>
+            <app-theader [elements]="schedules.data"
+                         [allChecked]="Boolean(schedules.data?.length && idsChecked.length === schedules.data?.length)"
+                         (toggleAllCheckbox)="toggleAllCheckboxEvent.next()">
+            </app-theader>
+            <app-tbody [(idsChecked)]="idsChecked" [schedules]="schedules" [clearCheckboxEvent]="clearCheckbox"
+                       [toggleAllCheckboxEvent]="toggleAllCheckboxEvent" (wantDelete)="onWantDeleteSelection()" />
           </table>
           <nav
-            *ngIf="(schedules | async)?.length"
-            class="flex justify-center gap-x-5"
+            *ngIf="schedules.data?.length"
+            class="flex justify-center gap-x-5 py-3"
           >
             <button
               class="p-2.5 inline-flex items-center gap-x-2 text-md rounded-full text-gray-800 hover:bg-blue-100 disabled:opacity-50 disabled:cursor-not-allowed dark:text-white dark:hover:bg-white/10"
@@ -282,103 +105,7 @@
     </div>
   </div>
 </section>
-<div
-  [ngClass]="isAlertDelete ? 'open z-[80]' : '-z-10'"
-  class="hs-overlay w-full h-full fixed top-0 start-0 overflow-x-hidden overflow-y-auto"
->
-  <div
-    [hidden]="!isAlertDelete"
-    class="w-full h-full absolute z-[-10] bg-blue-800 opacity-65"
-  ></div>
-  <div
-    class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all md:max-w-2xl md:w-full m-3 md:mx-auto"
-  >
-    <div
-      class="relative flex flex-col bg-white border shadow-sm rounded-xl overflow-hidden dark:bg-blue-800 dark:border-gray-700"
-    >
-      <div class="absolute top-2 end-2">
-        <button
-          class="flex justify-center items-center w-7 h-7 text-sm font-semibold rounded-lg border border-transparent text-gray-800 hover:bg-blue-100 disabled:opacity-50 disabled:cursor-not-allowed dark:text-white dark:border-transparent dark:hover:bg-blue-700 dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
-          data-hs-overlay="#hs-danger-alert"
-          type="button"
-        >
-          <span class="sr-only">Fermer</span>
-          <svg
-            class="flex-shrink-0 w-4 h-4"
-            fill="none"
-            height="24"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            viewBox="0 0 24 24"
-            width="24"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path d="M18 6 6 18"/>
-            <path d="m6 6 12 12"/>
-          </svg>
-        </button>
-      </div>
-
-      <div class="p-4 sm:p-10 overflow-y-auto">
-        <div class="flex gap-x-4 md:gap-x-7">
-          <!-- Icon -->
-          <span
-            class="flex-shrink-0 inline-flex justify-center items-center w-[46px] h-[46px] sm:w-[62px] sm:h-[62px] rounded-full border-4 border-red-50 bg-red-100 text-red-500 dark:bg-red-700 dark:border-red-600 dark:text-red-100"
-          >
-            <svg
-              class="flex-shrink-0 w-5 h-5"
-              fill="currentColor"
-              height="16"
-              viewBox="0 0 16 16"
-              width="16"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982
-                1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1
-                0 0 1 0-2z"
-              />
-            </svg>
-          </span>
-          <!-- End Icon -->
-
-          <div class="grow">
-            <h3 class="mb-2 text-xl font-bold text-gray-800 dark:text-gray-200">
-              {{
-                idSchedulesChecked.length == 1
-                  ? "Supprimer l'évènement n°" + idSchedulesChecked[0]
-                  : "Supprimer les évènements"
-              }}
-            </h3>
-            <p>
-              Êtes-vous sûre que vous voulez supprimer cet élément ? Il sera
-              impossible de le récupérer par la suite.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="flex justify-end items-center gap-x-2 py-3 px-4 bg-blue-50 border-t dark:bg-blue-800 dark:border-gray-700"
-      >
-        <button
-          (click)="onDeleteSelected()"
-          class="py-2 px-3 inline-flex items-center gap-x-2 text-sm rounded-lg border border-transparent bg-red-500 text-white hover:bg-red-600 disabled:opacity-50 disabled:cursor-not-allowed dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
-        >
-          Supprimer
-        </button>
-        <button
-          (click)="onCancelDelete()"
-          class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-blue-50 disabled:opacity-50 disabled:cursor-not-allowed dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-blue-800 dark:focus:outline-blue-500 dark:focus:ring-1 dark:focus:ring-gray-600"
-          data-hs-overlay="#hs-danger-alert"
-          type="button"
-        >
-          Annuler
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
+<app-event-modal-delete [(isAlertDelete)]="isAlertDelete" (clearCheckbox)="clearCheckbox.next()"
+                        (onDeleteSelected)="onDeleteSelected()"
+                        [idsChecked]="idsChecked"></app-event-modal-delete>
 <app-event-modal-add [(isAlertAdd)]="isAlertAdd"></app-event-modal-add>
